errors.txt
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp: In member function ‘void COL781::SphereObstacle::initializeRendering(COL781::OpenGL::Rasterizer&)’:
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:74:17: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘createAttribBuf’
   74 |   vertexBuf = r.createAttribBuf(vertices);
      |                 ^~~~~~~~~~~~~~~
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:75:17: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘createAttribBuf’
   75 |   normalBuf = r.createAttribBuf(normals);
      |                 ^~~~~~~~~~~~~~~
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:76:14: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘createAttribBuf’
   76 |   texBuf = r.createAttribBuf(texCoords);
      |              ^~~~~~~~~~~~~~~
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:79:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setVertexAttribs’; did you mean ‘createVertexAttribs’?
   79 |   r.setVertexAttribs(sphereObj, vertexBuf);
      |     ^~~~~~~~~~~~~~~~
      |     createVertexAttribs
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:80:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setVertexAttribs’; did you mean ‘createVertexAttribs’?
   80 |   r.setVertexAttribs(sphereObj, normalBuf, 1);
      |     ^~~~~~~~~~~~~~~~
      |     createVertexAttribs
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:81:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setVertexAttribs’; did you mean ‘createVertexAttribs’?
   81 |   r.setVertexAttribs(sphereObj, texBuf, 2);
      |     ^~~~~~~~~~~~~~~~
      |     createVertexAttribs
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:82:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setTriangleIndices’; did you mean ‘createTriangleIndices’?
   82 |   r.setTriangleIndices(sphereObj, triangles);
      |     ^~~~~~~~~~~~~~~~~~
      |     createTriangleIndices
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp: In member function ‘virtual void COL781::SphereObstacle::draw(COL781::OpenGL::Rasterizer&, COL781::OpenGL::ShaderProgram&, const COL781::Camera&)’:
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:172:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘drawObject’; did you mean ‘createObject’?
  172 |   r.drawObject(sphereObj);
      |     ^~~~~~~~~~
      |     createObject
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp: In member function ‘void COL781::PlaneObstacle::initializeRendering(COL781::OpenGL::Rasterizer&)’:
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:242:17: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘createAttribBuf’
  242 |   vertexBuf = r.createAttribBuf(vertices);
      |                 ^~~~~~~~~~~~~~~
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:243:17: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘createAttribBuf’
  243 |   normalBuf = r.createAttribBuf(normals);
      |                 ^~~~~~~~~~~~~~~
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:244:14: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘createAttribBuf’
  244 |   texBuf = r.createAttribBuf(texCoords);
      |              ^~~~~~~~~~~~~~~
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:247:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setVertexAttribs’; did you mean ‘createVertexAttribs’?
  247 |   r.setVertexAttribs(planeObj, vertexBuf);
      |     ^~~~~~~~~~~~~~~~
      |     createVertexAttribs
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:248:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setVertexAttribs’; did you mean ‘createVertexAttribs’?
  248 |   r.setVertexAttribs(planeObj, normalBuf, 1);
      |     ^~~~~~~~~~~~~~~~
      |     createVertexAttribs
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:249:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setVertexAttribs’; did you mean ‘createVertexAttribs’?
  249 |   r.setVertexAttribs(planeObj, texBuf, 2);
      |     ^~~~~~~~~~~~~~~~
      |     createVertexAttribs
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:250:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘setTriangleIndices’; did you mean ‘createTriangleIndices’?
  250 |   r.setTriangleIndices(planeObj, triangles);
      |     ^~~~~~~~~~~~~~~~~~
      |     createTriangleIndices
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp: In member function ‘virtual void COL781::PlaneObstacle::draw(COL781::OpenGL::Rasterizer&, COL781::OpenGL::ShaderProgram&, const COL781::Camera&)’:
/mnt/c/Users/pande/OneDrive/Documents/code/sem8/col781_new/assignments/a4/repo/src/obstacle.cpp:280:5: error: ‘class COL781::OpenGL::Rasterizer’ has no member named ‘drawObject’; did you mean ‘createObject’?
  280 |   r.drawObject(planeObj);
      |     ^~~~~~~~~~
      |     createObject
make[4]: *** [CMakeFiles/col781.dir/build.make:146: CMakeFiles/col781.dir/src/obstacle.cpp.o] Error 1
make[3]: *** [CMakeFiles/Makefile2:91: CMakeFiles/col781.dir/all] Error 2
make[2]: *** [CMakeFiles/Makefile2:202: CMakeFiles/e3.dir/rule] Error 2
make[1]: *** [Makefile:176: e3] Error 2
make: *** [Makefile:28: 3] Error 1
